--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,11 @@
   },
   "author": "",
   "dependencies": {
+    "dotenv-cli": "^7.4.1",
     "express": "^4.17.1"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "dotenv": "^16.4.5"
+  }
 }
